--- a/opencv-gui/gui/common_ui.ui
+++ b/opencv-gui/gui/common_ui.ui
@@ -13,9 +13,26 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <widget class="QComboBox" name="comboBox"/>
+  <layout class="QFormLayout" name="formLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label1">
+     <property name="text">
+      <string>Input Image</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="comboBox1"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label2">
+     <property name="text">
+      <string>Input Contours</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="comboBox2"/>
    </item>
   </layout>
  </widget>
