--- a/opencv-gui/gui/draw_contours_ui.ui
+++ b/opencv-gui/gui/draw_contours_ui.ui
@@ -13,13 +13,13 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
     <widget class="QWidget" name="widget_1" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout"/>
+     <layout class="QGridLayout" name="gridLayout_3"/>
     </widget>
    </item>
-   <item>
+   <item row="1" column="0">
     <widget class="QWidget" name="widget_2" native="true"/>
    </item>
   </layout>
