--- a/opencv-gui/gui/input_ui.ui
+++ b/opencv-gui/gui/input_ui.ui
@@ -13,6 +13,11 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QComboBox" name="comboBox"/>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
