--- a/opencv-gui/gui/main_window.ui
+++ b/opencv-gui/gui/main_window.ui
@@ -187,6 +187,7 @@
     <addaction name="actionCanny"/>
     <addaction name="actionCvtColor"/>
     <addaction name="actionThreshold"/>
+    <addaction name="actionAdaptiveThreshold"/>
     <addaction name="actionFindContours"/>
     <addaction name="actionDrawContours"/>
     <addaction name="actionKNNnumber"/>
@@ -249,6 +250,11 @@
   <action name="actionPyocr">
    <property name="text">
     <string>pyocr</string>
+   </property>
+  </action>
+  <action name="actionAdaptiveThreshold">
+   <property name="text">
+    <string>adaptiveThreshold</string>
    </property>
   </action>
  </widget>
